--- a/src/components/pages/PostAdd/PostAdd.module.scss
+++ b/src/components/pages/PostAdd/PostAdd.module.scss
@@ -1,18 +1,4 @@
-$breakpoints: (
-  small : 480px,
-  medium: 800px
-);
-
-@mixin mq($mq-breakpoint, $mq-breakpoints: $breakpoints) {
-
-  @if map-has-key($mq-breakpoints, $mq-breakpoint) {
-    $mq-breakpoint: map-get($mq-breakpoints, $mq-breakpoint);
-  }
-  
-  @media screen and (min-width: #{$mq-breakpoint}) {
-    @content;
-  }
-}
+@import '../../../styles/responsive.scss';
 
 @include mq(small) {
   .contentWidth {
